--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,8 +1,9 @@
 {{ partial "header.html" . }}
 {{ partial "top-block.html" . }}
+<div id="main">
   {{ range $index, $element :=  .Data.Pages.ByWeight }}{{ if eq .Section "post" }}
 
-    <div id="main">
+
         <!-- Intro -->
         {{ if modBool $index 2 }}<div id="intro" class="counterpoint">{{ else }}<div id="intro" class="point">{{ end}}
           <div class="container">
@@ -12,13 +13,13 @@
                     <i class="lead-icon icon-{{ .Params.icon }}"></i>
                 {{ end }}
                 <h2>{{ .Title }}</h2>
-                <p class="lead">
+                <div class="lead">
                     {{ .Content }}
-                </p>
+                </div>
               </div>
             </div>
           </div>
-        </div>
+
         <!-- /Intro -->
       {{ end }}
       {{ if eq .Section "carousel" }}
@@ -50,6 +51,7 @@
       </div>
       <!-- /Point -->
       {{ end }}
+    </div>
     {{ end }}
 
     </div>
